tests/fail/checkpoint_outlive_db.rs
use rocksdb::prelude::*;
use rocksdb::checkpoint::Checkpoint;

fn main() {
    let _checkpoint = {
        let db = DB::open_default("foo").unwrap();
        Checkpoint::new(&db)
    };
}
